WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285955
AX: content-visibility: hidden does not remove elements from the accessibility tree
https://bugs.webkit.org/show_bug.cgi?id=285955
Summary
AX: content-visibility: hidden does not remove elements from the accessibilit...
Tyler Wilcock
Reported
2025-01-14 15:42:07 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-14 15:42:19 PST
<
rdar://problem/142915090
>
Tyler Wilcock
Comment 2
2025-01-14 15:49:05 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39031
EWS
Comment 3
2025-01-15 09:01:00 PST
Committed
288940@main
(3727ac7f6822): <
https://commits.webkit.org/288940@main
> Reviewed commits have been landed. Closing PR #39031 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug