AX: content-visibility: hidden does not remove elements from the accessibility tree https://bugs.webkit.org/show_bug.cgi?id=285955 rdar://142915090

Reviewed by Chris Fleizach.

When an element has content-visibility:hidden, it should not be exposed in the accessibility tree. This commit fixes that.

This bug caused us to expose collapsed content in details elements, which is hidden with content-visibility:hidden after
https://github.com/WebKit/WebKit/commit/cd2f382c7dc0e50ae049f7e2420377e944ba60a8.

This patch was co-authored with Josh Hoffman (https://github.com/hoffmanjoshua).

* LayoutTests/accessibility/details-summary-content-hidden-expected.txt: Added.
* LayoutTests/accessibility/details-summary-content-hidden.html: Added.
* LayoutTests/accessibility/mac/details-summary-expected.txt:
* LayoutTests/accessibility/mac/details-summary.html:
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::isNodeVisible const):
(WebCore::AXObjectCache::onStyleChange):
(WebCore::AXObjectCache::handleAttributeChange):
(WebCore::isVisibilityHidden):
(WebCore::isRenderHidden):
(WebCore::AXObjectCache::onExpandedChanged): Deleted.
* Source/WebCore/accessibility/AXObjectCache.h:
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::defaultObjectInclusion const):
(WebCore::AccessibilityObject::isWithinHiddenWebArea const):
* Source/WebCore/html/HTMLDetailsElement.cpp:
(WebCore::HTMLDetailsElement::toggleOpen): Deleted.
* Source/WebCore/html/HTMLDetailsElement.h:

Canonical link: https://commits.webkit.org/288940@main